--- a/kasse.html
+++ b/kasse.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Rainydays | Kasse</title>
+    <link rel="stylesheet" href="https://use.typekit.net/zcx1yqf.css">
   </head>
 
   <header class="dropdown">
