--- a/kontakt.html
+++ b/kontakt.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Rainydays | Kontakt</title>
+    <link rel="stylesheet" href="https://use.typekit.net/zcx1yqf.css">
   </head>
   <body>
     <header class="dropdown">
